Temporarily disables some tests that could fail.